﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-11-06 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/database_interface.lib.php, 
      libraries/dbi/*.dbi.lib.php:
      - added PMA_DBI_convert_message()
      - bug #1344654 Not converted mysql error message to chosen user language
    
2005-11-05 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * themes/*/css/theme_right.css.php:
      dropped deprecated style classes
    * server_databases, libraries/databases_interface.lib.php,
      libraries/mysql_charsets.lib.php:
      updated database list:
      - added PMA_getServerCollation()
        - display server collation in db list footer
      - added PMA_DBI_get_databases_full()
        - make use of info_schema on MySQL 5
        - always display db stats for MySQL 5
      - fixed html output
      - replaced " with ' in some queries
    * tbl_properties_structure.php, tbl_properties_common.php
      tbl_properties_links.php:
      - no drop, empty, operation, insert, import for information_schema tables
      - enabled export for views
    * db_details_common.php, db_details_structure.php, db_details_links.php:
      - no import, drop, rights, operation for information_schema
    
2005-11-04 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza)

2005-11-04 Michal Čihař  <michal@cihar.com>
    * db_details_structure.php: Read InnoDB exact count before rendering icons
      for truncating (bug #1337744).
    
2005-11-04 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * db_details_structure.php:
      fixed display of stats for InnoDB and information_schema
    * main.php:
      - bug #1348089 SQL and actions bellow should be same width
      - removed nowrap, vertical srcolling is really annoying
    * main.php, libraries/check_user_privileges.lib.php:
      - bug #1348189 after droping db some links in main.php are missing